Fix css wrapping

--- a/styles/global.css
+++ b/styles/global.css
@@ -221,7 +221,7 @@ article img {
 
 .center-col {
     text-align: left;
-    width: 36rem;
+    max-width: 36rem;
     margin: auto;
 }
 
